added dots animation

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -12,3 +12,4 @@
 @import "modal/modal";
 @import "modal-template/modal-template";
 @import "single-page/single-page";
+@import "card-img/card-img";
