--- a/src/blocks/components/card/card.scss
+++ b/src/blocks/components/card/card.scss
@@ -1,8 +1,8 @@
 .card {
     box-sizing: border-box;
     display: flex;
-    border: 1px solid rgba($dark, 0.05);
     padding: 30px;
+    border: 1px solid rgba($dark, 0.05);
     background-color: rgba($light, 0.25);
     backdrop-filter: blur(5px);
     @media (max-width: $break_xl) {
@@ -19,34 +19,34 @@
         text-align: center;
     }
 
-    &__img {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-width: 140px;
-        max-width: 140px;
-        min-height: 140px;
-        max-height: 140px;
-        background-color: $dark;
-        border-radius: 50%;
-        @media (max-width: $break_md) {
-            min-width: 100px;
-            max-width: 100px;
-            min-height: 100px;
-            max-height: 100px;
-        }
-        transition: {
-            duration: 0.3s;
-            property: color, background-color;
-        }
-    }
+    // &__img {
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     min-width: 140px;
+    //     max-width: 140px;
+    //     min-height: 140px;
+    //     max-height: 140px;
+    //     background-color: $dark;
+    //     border-radius: 50%;
+    //     @media (max-width: $break_md) {
+    //         min-width: 100px;
+    //         max-width: 100px;
+    //         min-height: 100px;
+    //         max-height: 100px;
+    //     }
+    //     transition: {
+    //         duration: 0.3s;
+    //         property: color, background-color;
+    //     }
+    // }
 
-    &__icon {
-        width: 55px;
-        @media (max-width: $break_sm) {
-            width: 40px;
-        }
-    }
+    // &__icon {
+    //     width: 55px;
+    //     @media (max-width: $break_sm) {
+    //         width: 40px;
+    //     }
+    // }
 
     &__info {
         margin-left: 30px;
@@ -68,9 +68,9 @@
     }
 
     &__title {
-        @include h4();
         margin-bottom: 10px;
         font-weight: 600;
+        @include h4();
     }
 
     &__description {
