--- a/src/blocks/components/single-page/single-page.pug
+++ b/src/blocks/components/single-page/single-page.pug
@@ -19,4 +19,7 @@ mixin single-page({ className = false, title, description, imgName })
                         })
                 .single-page__img-col
                     .single-page__rounds.rounds.rounds_transparent
+                        span.rounds__dot.rounds__dot_1.dot
+                        span.rounds__dot.rounds__dot_2.dot
+                        span.rounds__dot.rounds__dot_3.dot
                         img.single-page__img(src=`./img/${imgName}.svg` alt='')
