--- a/src/blocks/modules/certificates/certificates.pug
+++ b/src/blocks/modules/certificates/certificates.pug
@@ -11,6 +11,7 @@ mixin certificates({ className = false })
                                 .certificates__slide.gallery__slide
                                     a.certificates__slide-inner(data-fslightbox="certificates" href=`./img/certificates/${slide.imgName}-detail.jpg`)
                                         img.certificates__slide-img.tns-lazy(
+                                            src=config.srcPixel
                                             data-src=`./img/certificates/${slide.imgName}.jpg` 
                                             data-srcset=`./img/certificates/${slide.imgName}@2x.jpg 2x` 
                                             alt=`Скан документа "${slide.title}"`
@@ -20,10 +21,10 @@ mixin certificates({ className = false })
                         .gallery__footer.certificates__slider-footer
                             .gallery__control-panel
                                 .gallery__pagination 
-                                    span.gallery__pagination-item.gallery__pagination-item_active(id="active-pagination") 01
+                                    span.gallery__pagination-item.gallery__pagination-item_active(data-active-pagination) 01
                                     | /
-                                    span.gallery__pagination-item(id="total-pagination") 03
-                                .gallery__controls(id="controls")
+                                    span.gallery__pagination-item(data-total-pagination) 03
+                                .gallery__controls(data-controls)
                                     button.gallery__control.link
                                         +icon({
                                             iconName: 'arrow-left',
