--- a/src/blocks/modules/modal-services/modal-services.pug
+++ b/src/blocks/modules/modal-services/modal-services.pug
@@ -9,7 +9,8 @@ mixin modal-services({ className = false })
             description: modal.description,
             slides: modal.slides,
             iconName: modal.iconName,
-            advantage: modal.advantage
+            advantage: modal.advantage,
+            dotsPosition: modal.dotsPosition ? modal.dotsPosition : [],
         })
             if (modal.iconName === "services_labaratory")
                 p.p-bold Испытательная лаборатория (ИЛ) является структурным подразделением ТОО «Научно-исследовательский центр «Уголь» (ТОО «НИЦ «Уголь»), обеспечивающий до 95% всего объема работ организации. ИЛ выполняет все виды лабораторных и технологических исследований, и осуществляет отбор проб.
