--- a/src/blocks/modules/services/data.pug
+++ b/src/blocks/modules/services/data.pug
@@ -5,6 +5,20 @@
             title: "Проведение испытаний продукции", 
             description: "Испытательная лаборатория (ИЛ)",
             advantage: "В результате клиент получает протокол испытаний.",
+            dotsPosition: [
+                {
+                    top: "21%",
+                    right: "19%",
+                },
+                {
+                    top: "65%",
+                    right: "17%",
+                },
+                {
+                    bottom: "35%",
+                    left: "17%",
+                },
+            ],
 
             slides: [
                 {
@@ -29,6 +43,20 @@
             title: "Подтверждение соответствия продукции установленным требованиям", 
             description: "Орган по подтверждению соответствия (ОПС)",
             advantage: "В результате ОПС выдает сертификаты соответствия продукции.",
+            dotsPosition: [
+                {
+                    top: "65%",
+                    right: "17%",
+                },
+                {
+                    bottom: "35%",
+                    left: "17%",
+                },
+                {
+                    top: "21%",
+                    right: "19%",
+                },
+            ],
 
             slides: [
                 {
@@ -53,6 +81,20 @@
             title: "Работы в области стандартизации", 
             description: "Отдел стандартизации (ОС)",
             advantage: "В результате клиент получает нормативный документ ",
+            dotsPosition: [
+                {
+                    bottom: "35%",
+                    left: "15%",
+                },
+                {
+                    top: "65%",
+                    right: "17%",
+                },
+                {
+                    top: "15%",
+                    left: "40%",
+                },
+            ],
 
             slides: [
                 {
@@ -77,6 +119,20 @@
             title: "Проведение научно-исследовательских работ", 
             description: "Отдел науки (ОН)",
             advantage: "Результатом является отчет по научно-исследовательской работе",
+            dotsPosition: [
+                {
+                    bottom: "35%",
+                    left: "15%",
+                },
+                {
+                    top: "65%",
+                    right: "20%",
+                },
+                {
+                    top: "20%",
+                    right: "20%",
+                },
+            ],
 
             slides: [
                 {
