--- a/src/blocks/modules/services/services.pug
+++ b/src/blocks/modules/services/services.pug
@@ -14,5 +14,6 @@ mixin services({ className = false })
                         iconName: service.iconName,
                         title: service.title, 
                         description: service.description,
-                        advantage: service.advantage
+                        advantage: service.advantage,
+                        dotsPosition: service.dotsPosition
                     })
