--- a/src/blocks/modules/steps/data.pug
+++ b/src/blocks/modules/steps/data.pug
@@ -3,7 +3,7 @@
         {
             iconName: "steps_manager",
             title: "Вы связываетесь с нами",
-            description: "звоните по телефону <a href=''>+7 (776) 523 19 19</a> или заполняте форму ниже",
+            description: `звоните по телефону <br><a class="link link_semibold" href="tel:${config.phone[0].tel}">${config.phone[0].number}</a> <br>или заполняте форму ниже`,
         },
         {
             iconName: "steps_checklist",
