--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -1,5 +1,6 @@
 -
 	const config = {
+		srcPixel: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=",
 		socials: {
 			whatsapp: {
 				href: 'https://whatsapp.ru',
@@ -61,7 +62,7 @@ html(lang="ru")
 		title #{title}
 		meta(name="description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
 		meta(property="og:title" content=title)
-		meta(property="og:site_name" content="Kaleydoevomini")
+		meta(property="og:site_name" content="ТОО «НИЦ «Уголь»")
 		meta(property="og:url" content="https://coal.bydex.ru/")
 		meta(property="og:description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
 		meta(property="og:image" content="img/opengraph.jpg")
