--- a/src/blocks/components/hamburger/hamburger.pug
+++ b/src/blocks/components/hamburger/hamburger.pug
@@ -1,4 +1,4 @@
 mixin hamburger({className = false, idName = false})
     button.hamburger.hamburger--slider(class=className id=idName)
-        .hamburger-box
-            .hamburger-inner
+        span.hamburger-box
+            span.hamburger-inner
