--- a/src/blocks/modules/about/about.pug
+++ b/src/blocks/modules/about/about.pug
@@ -21,6 +21,7 @@ mixin about({ className = false })
                                                     h4.about__slide-title !{slide.title}
                                                     small.about__slide-status !{slide.status}
                                                 img.about__slide-img.tns-lazy(
+                                                    src=config.srcPixel
                                                     data-src=`./img/about/${slide.imgName}.png` 
                                                     data-srcset=`./img/about/${slide.imgName}@2x.png 2x` 
                                                     alt=`Фото сотрудника ${slide.title}`
@@ -28,10 +29,10 @@ mixin about({ className = false })
                                 .gallery__footer.about__slider-footer
                                     .gallery__control-panel
                                         .gallery__pagination 
-                                            span.gallery__pagination-item.gallery__pagination-item_active(id="active-pagination") 01
+                                            span.gallery__pagination-item.gallery__pagination-item_active(data-active-pagination) 01
                                             | /
-                                            span.gallery__pagination-item(id="total-pagination") 03
-                                        .gallery__controls(id="controls")
+                                            span.gallery__pagination-item(data-total-pagination) 03
+                                        .gallery__controls(data-controls)
                                             button.gallery__control.link
                                                 +icon({
                                                     iconName: 'arrow-left',
